--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,19 +200,18 @@ html {
 
 body {
   height: 100%;
-  background-color: #ffffff;
-  background-image: url("images/overlay.png"),
-    -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
-  background-image: url("images/overlay.png"),
-    -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
-  background-image: url("images/overlay.png"),
-    -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
-  background-image: url("images/overlay.png"),
-    linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)),
-    url("https://media.giphy.com/media/3o85xA30i7z1LUIISY/giphy.gif");
+
+  /* background-color: #ffffff; */
+  /* background-image: url("images/overlay.png"),
+    -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg"); */
+  /* background-image: url("images/overlay.png"),
+    -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg"); */
+  /* background-image: url("images/overlay.png"),
+    -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg"); */
+  background-image: url("https://media.giphy.com/media/3o85xA30i7z1LUIISY/giphy.gif");
   background-repeat: repeat, no-repeat, no-repeat;
-  background-size: 100px 100px, cover, cover;
-  background-position: top left, center center, bottom center;
+  background-size: 1000px 1000px, cover, cover;
+  position: fixed, cover, cover;
   background-attachment: fixed, fixed, fixed;
 }
 
