--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -209,10 +209,17 @@ body {
   /* background-image: url("images/overlay.png"),
     -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg"); */
   background-image: url("https://media.giphy.com/media/3o85xA30i7z1LUIISY/giphy.gif");
-  background-repeat: repeat, no-repeat, no-repeat;
-  background-size: 1000px 1000px, cover, cover;
-  position: fixed, cover, cover;
-  background-attachment: fixed, fixed, fixed;
+
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  /* background-repeat: no-repeat, no-repeat;
+  background-size: contain, cover, cover;
+  position: cover, cover;
+  background-attachment: fixed, fixed, fixed; */
 }
 
 body:after {
