shrinks bg image

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body {
-  /* background-image: url("https://media.giphy.com/media/3o85xA30i7z1LUIISY/giphy.gif"); */
-  background-image: url("chicago.jpg");
+  background-image: url("chicago copy.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
